# langit-korea

./: .env.example  .env.template  .gitattributes  .gitignore  .vercel.json  FIREBASE_SETUP.md  QUESTION_BANK_GUIDE.md  README.md  TESTING_ZED_SIMPLE.md  briefing.html  check_supabase.py  clean_extract.py  dashboard.html  deployment-security.md  extract-unit31.js  extract_real_opts.py  firebase.json  fix_all_pdf.py  fix_missing.py  hangul-path.html  hasil-simulasi.html  home.html  index.html  integrate_clean.py  integrate_simple.py  integrate_to_supabase.py  langit-korea-arsitektur-modul.md  langit-korea-backend-prompt.md  langit-korea-integrate-supabase-prompt.md  langit-korea-prompt.md  langit-korea-simulasi-prompt.md  latihan-eps.html  listening.html  login.html  match_jawaban.py  match_jawaban_v2.py  modul-unit.html  modul.html  onboarding.html  open_test_2025.json  (+25 more)
assets/: unit_list.json
css/: style.css  theme.css
epstopik_forensic_scraper/: .env.example  README.md  cli.py  main.py  pyproject.toml
epstopik_forensic_scraper/artifacts/: provenance.db
epstopik_forensic_scraper/config/: settings.py
epstopik_forensic_scraper/db/: __init__.py  database.py  models.py
epstopik_forensic_scraper/models/: __init__.py  enums.py  extraction_models.py  schemas.py
epstopik_forensic_scraper/scraper/: __init__.py  constants.py  downloader.py  extract_open_test.py  fetcher.py  forensics.py  hwp_engine.py  listening_parser.py  parser.py  parsing_rules.py  reading_parser.py
epstopik_forensic_scraper/tests/: test_parsing_rules.py
js/: ai-scraper.js  home-integration.js  (+10 more)
(+550 files in other folders)
