[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "epstopik-forensic-scraper"
version = "0.1.0"
description = "Forensic-grade EPS-TOPIK workbook scraper with full audit trail and data provenance"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "sqlmodel>=0.0.16",
    "loguru>=0.7",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "aiofiles>=23.2",
]

[project.optional-dependencies]
playwright = ["playwright>=1.40"]
dev = ["pytest", "black", "ruff", "mypy"]


[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "models*", "db*", "scraper*", "epstopik_forensic_scraper*"]

[project.scripts]
epstopik = "epstopik_forensic_scraper.cli:app"
